coded index.html, changed home photo name

--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
   </head>
   <body>
     <header>
+      <a href="index.html"><img src="images/logo.png" alt="kg logo" width="100" /></a>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">Resum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <aside class="home-photo">
+      <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="400" />
+    </aside>
+
+    <main>
+      <h1>welcome</h1>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </main>
+
+    <footer>
+      <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+      <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
+      <p class="dc">Washington, DC</p>
+    </footer>
 
 
 
