coded basic content in resume and work; changed contact page name

--- a/resume.html
+++ b/resume.html
@@ -18,6 +18,93 @@
   </head>
   <body>
     <header>
+      <a href="index.html"><img src="images/logo.png" alt="kg logo" width="100" /></a>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <h1>r&eacute;sum&eacute;</h1>
+
+    <aside class="skills">
+      <h2>skills</h2>
+
+      <p>Microsoft Office</p>
+
+      <p>Section 508 Compliance</p>
+
+      <p>Technical Editing</p>
+
+      <p>Adobe Creative Suite</p>
+
+      <p>HTML</p>
+
+      <p>CSS</p>
+    </aside>
+
+    <main>
+      <h2 class="resumehead">work experience</h2>
+
+      <div class="leidos">
+        <p class="bold">Marketing and Communications Specialist, Leidos</p>
+        <p>November 2016 &ndash present</p>
+        <p class="italic">Reston, VA</p>
+        <ul>
+          <li>Provide communication and marketing support for Federal projects.</li>
+          <li>Lead portfolio's Section 508 remediation efforts through HTML, accessible PDFs, or by providing long descriptions for figures.</li>
+          <li>Draft and edit deliverables for publication, ensuring compliance with Federal style guides.</li>
+          <li>Develop communications and marketing strategies for technical teams.</li>
+          <li>Facilitate webinars of up to 500 participants using Adobe Connect for internal and external audiences.</li>
+          <li>Support conference and event planning and execution for Federal customers.</li>
+          <li>Support engineering and communication teams on ad hoc basis.</li>
+        </ul>
+      </div>
+
+      <div class="jsi">
+        <p class="bold">Communications and Production Coordinator, John Snow, Inc.</p>
+        <p>June 2014 &ndash November 2016</p>
+        <p class="italic">Arlington, VA</p>
+        <p>Coordniator on the <a href="https://www.spring-nutrition.org/" target="_blank">SPRING project</a>.</p>
+        <ul>
+          <li>Oversee production of all project deliverables, ensuring deliverables meet SPRING, Feed the Future, and USAID branding guidelines and style guides.</li>
+          <li>Track deliverable timelines to ensure on-time delivery in compliance with project and country work plans.</li>
+          <li>Meet contractual agreements with USAID and USAID country missions.</li>
+          <li>Coordinate with four global initiative teams, two cross-cutting project teams, and seven country teams, both domestic and international-based.</li>
+          <li>Coordinate selection of and business with editing, layout, printing, and translation vendors.</li>
+          <li>Manage social media networks, including live-tweets during webinar events, and the project's Instagram account.</li>
+          <li>Create content on project website using HTML.</li>
+        </ul>
+      </div>
+
+      <h2 class="resumehead">education</h2>
+
+      <div class="florida">
+        <p class="bold">Masters of Art, Mass Communication</p>
+        <p class="bold italic">Web Design</p>
+        <p>University of Florida</p>
+        <p>January 2021 &ndash present</p>
+      </div>
+
+      <div class="vt">
+        <p class="bold">Bachelors of Art, Communication</p>
+        <p class="bold italic">Electronic and Print Journalism, minors in Professional Writing, Marketing Communications, and Popular Culture</p>
+        <p>Virginia Tech</p>
+        <p>August 2008 &ndash May 2013</p>
+      </div>
+    </main>
+
+
+
+
+    <footer>
+      <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+      <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
+      <p class="dc">Washington, DC</p>
+    </footer>
 
 
 
