--- a/work.html
+++ b/work.html
@@ -18,9 +18,34 @@
   </head>
   <body>
     <header>
+      <a href="index.html"><img src="images/logo.png" alt="kg logo" width="100" /></a>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">Resum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h1>work samples</h1>
+
+      <h2>web coding</h2>
+
+      <h2>writing</h2>
+
+      <h2>design</h2>
 
 
+    </main>
 
+
+    <footer>
+      <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+      <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
+      <p class="dc">Washington, DC</p>
+    </footer>
 
   </body>
 </html>
