updated contact page html

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Assignment 5</title>
+    <title>Kayce Georgi</title>
 
     <!-- Style -->
     <link href="style/style.css" rel="stylesheet" type="text/css">
@@ -17,15 +17,24 @@
 
   </head>
   <body>
+    <header>
+      <a href="index.html"><img src="images/logo.png" alt="kg logo" width="100" /></a>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">Resum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <h1>let's chat</h1>
 
-    <img class="football" src="images/contact.jpg" alt="Virginia Tech Football Game" width="400">
+    <aside class="football">
+      <img src="images/contact.jpg" alt="Virginia Tech Football Game" width="400">
+    </aside>
 
-    <div class="container">
-      <div class="text">
-        <p>Thank you for visiting my website! I look forward to your message, and hope you'll get in contact soon. Please feel free to use the contact information below, or send me a message via the form, and I'll be sure to respond to you!</p>
-      </div>
-
+    <main>
       <div class="written">
         <p class="email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
         <p class="phone"><a href="tel:+12405294709">(240) 529-4709</a></p>
@@ -57,7 +66,13 @@
           <input type="submit" value="Send">
         </div>
       </form>
-    </div>
+    </main>
+
+    <footer>
+      <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+      <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
+      <p class="dc">Washington, DC</p>
+    </footer>
 
   </body>
 </html>
