added images to folder, added text, started progress bars

--- a/resume.html
+++ b/resume.html
@@ -35,15 +35,39 @@
 
       <p>Microsoft Office</p>
 
+      <div class="progress">
+        <div class="100"></div>
+      </div>
+
       <p>Section 508 Compliance</p>
+
+      <div class="progress">
+        <div class="85"></div>
+      </div>
 
       <p>Technical Editing</p>
 
+      <div class="progress">
+        <div class="75"></div>
+      </div>
+
       <p>Adobe Creative Suite</p>
+
+      <div class="progress">
+        <div class="75"></div>
+      </div>
 
       <p>HTML</p>
 
+      <div class="progress">
+        <div class="75"></div>
+      </div>
+
       <p>CSS</p>
+
+      <div class="progress">
+        <div class="60"></div>
+      </div>
     </aside>
 
     <main>
@@ -104,6 +128,13 @@
       <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
       <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
       <p class="dc">Washington, DC</p>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </footer>
 
 
