--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li><a href="work.html">Work</a></li>
-          <li><a href="resume.html">Resum&eacute;</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -72,6 +72,13 @@
       <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
       <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
       <p class="dc">Washington, DC</p>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </footer>
 
   </body>
