--- a/index.html
+++ b/index.html
@@ -22,26 +22,39 @@
       <nav>
         <ul>
           <li><a href="work.html">Work</a></li>
-          <li><a href="resume.html">Resum&eacute;</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <aside class="home-photo">
-      <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="400" />
+      <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="350" />
     </aside>
 
     <main>
-      <h1>welcome</h1>
+      <h1>hello!</h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>My name is Kayce and I am excited that you are here! Currently, I am a marketing and communications specialist with aspirations to break into the web design world. I have experience in various web langauges, including HTML, CSS, and Javascript. I am currently enrolled in a Masters in Mass Communication program, specializing in Web Design, with the University of Florida (Go Gators...though I will always root for my first true love, the Hokies!).</p>
+
+      <p>I am also familiar with the Adobe Creative Suite and have been using Illustrator, InDesign, and Photoshop since I was introduced to CS3 in high school.</p>
+
+      <p>Outside of design and web langauges, my communications background has made me familiar with writing, editing, webinar facilitation, event planning, and accessibility, especially in regards to Section 508 and the Web Content Accessibility Guidelines (WCAG).</p>
+
+      <p>I look forward to finding out how I fit into your team!</p>
     </main>
 
     <footer>
       <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
       <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
       <p class="dc">Washington, DC</p>
+      <nav>
+        <ul>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </footer>
 
   </body>
