--- a/resume.html
+++ b/resume.html
@@ -36,37 +36,37 @@
       <p>Microsoft Office</p>
 
       <div class="progress">
-        <div class="100"></div>
+        <div class="expert"></div>
       </div>
 
       <p>Section 508 Compliance</p>
 
       <div class="progress">
-        <div class="85"></div>
-      </div>
-
-      <p>Technical Editing</p>
-
-      <div class="progress">
-        <div class="75"></div>
-      </div>
-
-      <p>Adobe Creative Suite</p>
-
-      <div class="progress">
-        <div class="75"></div>
+        <div class="intermediate-high"></div>
       </div>
 
       <p>HTML</p>
 
       <div class="progress">
-        <div class="75"></div>
+        <div class="intermediate"></div>
+      </div>
+
+      <p>Adobe Creative Suite</p>
+
+      <div class="progress">
+        <div class="intermediate"></div>
+      </div>
+
+      <p>Technical Editing</p>
+
+      <div class="progress">
+        <div class="intermediate"></div>
       </div>
 
       <p>CSS</p>
 
       <div class="progress">
-        <div class="60"></div>
+        <div class="half"></div>
       </div>
     </aside>
 
