--- a/examples.html
+++ b/examples.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <title>Kayce Georgi</title>
 
+    <!--Lightbox -->
+    <link href="lightbox/src/css/lightbox.css" rel="stylesheet" />
+
     <!-- Style -->
     <link href="style/style.css" rel="stylesheet" type="text/css">
+
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts/script.js" type="text/javascript"></script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,31 +35,19 @@
     </header>
 
     <main>
-      <h1>work samples</h1>
+      <h1>other web design principles</h1>
 
-      <h2>web coding</h2>
+      <h2>lightbox</h2>
 
-      <img src="images/wdw.png" alt="Assignment 4 Website screenshot" />
+      <section class="lightbox-example">
+        <a href="images/wdw.png" data-lightbox="image-1" data-title="CSS Animation Assignment"><img src="images/wdw.png" alt="Assignment 4 Website screenshot" /></a>
 
-      <img src="images/vts.png" alt="Virtual Trade Show Booth Screenshot" />
+        <a href="images/vts.png" data-lightbox="image-1" data-title="FHWA Office of Safety Virtual Trade Show Booth"><img src="images/vts.png" alt="Virtual Trade Show Booth Screenshot" /></a>
 
-      <img src="images/safetycompass.png" alt="Safety Compass Newsletter header" />
+        <a href="images/safetycompass.png" data-lightbox="image-1" data-title="FHWA Office of Safety Safety Compass Newsletter"><img src="images/safetycompass.png" alt="Safety Compass Newsletter header" /></a>
+      </section>
 
-      <h2>design</h2>
 
-      <img src="images/portiko.png" alt="Portiko logo" />
-
-      <img src="images/gedc.png" alt="Gainesville Economic Development Corporation logo">
-
-      <img src="images/30days.jpg" alt="30 Days of Blacksburg poster">
-
-      <h2>writing</h2>
-
-      <img src="images/incentives.png" alt="FHWA Office of Operations report cover">
-
-      <img src="images/sc.png" alt="FHWA Office of Safety Safety Compass Newsletter Article screenshot">
-
-      <img src="images/spring.png" alt="SPRING Project Success Story">
     </main>
 
 
@@ -69,5 +64,6 @@
       </nav>
     </footer>
 
+    <script src="lightbox/src/js/lightbox.js"></script>
   </body>
 </html>
