fixed and styled header and footer

--- a/examples.html
+++ b/examples.html
@@ -52,16 +52,11 @@
 
 
     <footer>
-      <p class="footer-email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
-      <p class="footer-phone"><a href="tel:2405294709">(240) 529-4709</a></p>
-      <p class="dc">Washington, DC</p>
-      <nav>
-        <ul>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="resume.html">R&eacute;sum&eacute;</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <ul>
+        <li><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></li>
+        <li><a href="tel:2405294709">(240) 529-4709</a></li>
+        <li>Washington, DC</li>
+      </ul>
     </footer>
 
     <script src="lightbox/src/js/lightbox.js"></script>
