put content in main tags to force footer to bottom

--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
       </nav>
     </header>
 
-    <aside class="home-photo">
-      <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="350" />
-    </aside>
-
     <main>
-      <h1>hello!</h1>
+      <aside class="home-photo">
+        <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="350" />
+      </aside>
 
-      <p>My name is Kayce and I am excited that you are here! Currently, I am a marketing and communications specialist with aspirations to break into the web design world. I have experience in various web langauges, including HTML, CSS, and Javascript. I am currently enrolled in a Masters in Mass Communication program, specializing in Web Design, with the University of Florida (Go Gators...though I will always root for my first true love, the Hokies!).</p>
+      <div class="right">
+        <h1>hello!</h1>
 
-      <p>I am also familiar with the Adobe Creative Suite and have been using Illustrator, InDesign, and Photoshop since I was introduced to CS3 in high school.</p>
+        <p>My name is Kayce and I am excited that you are here! Currently, I am a marketing and communications specialist with aspirations to break into the web design world. I have experience in various web langauges, including HTML, CSS, and Javascript. I am currently enrolled in a Masters in Mass Communication program, specializing in Web Design, with the University of Florida (Go Gators...though I will always root for my first true love, the Hokies!).</p>
 
-      <p>Outside of design and web langauges, my communications background has made me familiar with writing, editing, webinar facilitation, event planning, and accessibility, especially in regards to Section 508 and the Web Content Accessibility Guidelines (WCAG).</p>
+        <p>I am also familiar with the Adobe Creative Suite and have been using Illustrator, InDesign, and Photoshop since I was introduced to CS3 in high school.</p>
 
-      <p>I look forward to finding out how I fit into your team!</p>
+        <p>Outside of design and web langauges, my communications background has made me familiar with writing, editing, webinar facilitation, event planning, and accessibility, especially in regards to Section 508 and the Web Content Accessibility Guidelines (WCAG).</p>
+
+        <p>I look forward to finding out how I fit into your team!</p>
+      </div>
     </main>
 
     <footer>
