added Google Analytics and Meta tags

--- a/examples.html
+++ b/examples.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CTT3VHPKJQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CTT3VHPKJQ');
+    </script>
+
     <meta charset="utf-8">
+    <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
+    <meta name="description" content="Marketing. Communications. Design. Hokie.">
     <title>Kayce Georgi</title>
 
     <!--Lightbox -->
