added HTML comments

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,11 @@
       gtag('config', 'G-CTT3VHPKJQ');
     </script>
 
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
     <meta name="description" content="Marketing. Communications. Design. Hokie.">
+
     <title>Kayce Georgi</title>
 
     <!-- Style -->
@@ -40,6 +42,7 @@
       </nav>
     </header>
 
+    <!-- Main Body -->
     <main>
       <section class="contact-page">
         <h1>let's chat</h1>
@@ -55,6 +58,7 @@
           <a href="https://www.linkedin.com/in/kayce-georgi-1591572b/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
 
+        <!-- Form -->
         <form id="test_form" class="contactform" name="test_form" method="post" action="form.php" onsubmit="return validateForm(this)">
           <div class="nameform classifier">
             <label for="nameinput" class="label_input_wrap">Name</label>
