--- a/examples.html
+++ b/examples.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-CTT3VHPKJQ');
     </script>
 
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
     <meta name="description" content="Marketing. Communications. Design. Hokie.">
@@ -46,6 +47,8 @@
       </nav>
     </header>
 
+
+    <!-- Main Body -->
     <main>
       <h1>other web design principles</h1>
 
