--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-CTT3VHPKJQ');
     </script>
 
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
     <meta name="description" content="Marketing. Communications. Design. Hokie.">
@@ -40,6 +41,7 @@
       </nav>
     </header>
 
+    <!-- Skills Box -->
     <main>
       <h1>r&eacute;sum&eacute;</h1>
 
@@ -83,6 +85,7 @@
         </div>
       </aside>
 
+      <!-- Main Body -->
       <section class="resumetext">
         <h2 class="resumehead">work experience</h2>
 
