--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-CTT3VHPKJQ');
     </script>
 
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
     <meta name="description" content="Marketing. Communications. Design. Hokie.">
@@ -39,9 +40,11 @@
       </nav>
     </header>
 
+    <!-- Main Body -->
     <main>
       <h1>work samples</h1>
 
+      <!-- Web Design -->
       <h2>web coding</h2>
 
       <img src="images/wdw.png" alt="Assignment 4 Website screenshot" />
@@ -50,6 +53,7 @@
 
       <img src="images/safetycompass.png" alt="Safety Compass Newsletter header" />
 
+      <!-- Graphic Design -->
       <h2>design</h2>
 
       <img src="images/portiko.png" alt="Portiko logo" />
@@ -58,6 +62,7 @@
 
       <img src="images/30days.jpg" alt="30 Days of Blacksburg poster">
 
+      <!-- Writing / Editing -->
       <h2>writing</h2>
 
       <img src="images/incentives.png" alt="FHWA Office of Operations report cover">
