--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       gtag('config', 'G-CTT3VHPKJQ');
     </script>
 
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="keywords" content="Kayce Georgi Florida Virginia Tech Leidos web graphic design employment DC Virginia">
     <meta name="description" content="Marketing. Communications. Design. Hokie.">
@@ -40,6 +41,7 @@
       </nav>
     </header>
 
+    <!-- Main Body -->
     <main>
       <aside class="home-photo">
         <img src="images/photo.jpg" alt="Kayce Georgi Photo" width="350" />
