coded flip cards

--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
 
         <div class="leidos">
           <p class="bold">Marketing and Communications Specialist, Leidos</p>
-          <p>November 2016 &ndash present</p>
+          <p>November 2016 &ndash; present</p>
           <p class="italic">Reston, VA</p>
           <ul>
             <li>Provide communication and marketing support for Federal projects.</li>
@@ -106,7 +106,7 @@
 
         <div class="jsi">
           <p class="bold">Communications and Production Coordinator, John Snow, Inc.</p>
-          <p>June 2014 &ndash November 2016</p>
+          <p>June 2014 &ndash; November 2016</p>
           <p class="italic">Arlington, VA</p>
           <p>Coordniator on the <a href="https://www.spring-nutrition.org/" target="_blank">SPRING project</a>.</p>
           <ul>
@@ -126,14 +126,14 @@
           <p class="bold">Masters of Art, Mass Communication</p>
           <p class="bold italic">Web Design</p>
           <p>University of Florida</p>
-          <p>January 2021 &ndash present</p>
+          <p>January 2021 &ndash; present</p>
         </div>
 
         <div class="vt">
           <p class="bold">Bachelors of Art, Communication</p>
           <p class="bold italic">Electronic and Print Journalism, minors in Professional Writing, Marketing Communications, and Popular Culture</p>
           <p>Virginia Tech</p>
-          <p>August 2008 &ndash May 2013</p>
+          <p>August 2008 &ndash; May 2013</p>
         </div>
       </section>
     </main>
