--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="images/logo.png" alt="kg logo" width="100" /></a>
+      <a href="index.html"><img src="images/logo.png" alt="Kayce Georgi logo" width="100" /></a>
       <nav>
         <ul>
           <li><a href="work.html">Work</a></li>
@@ -45,31 +45,144 @@
       <h1>work samples</h1>
 
       <!-- Web Design -->
-      <h2>web coding</h2>
+      <section class="cards">
+        <h2>web coding</h2>
 
-      <img src="images/wdw.png" alt="Assignment 4 Website screenshot" />
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/wdw.png" alt="University of Florida Assignment 4 CSS Animation Website" title="CSS Animation Website" />
+            </div>
 
-      <img src="images/vts.png" alt="Virtual Trade Show Booth Screenshot" />
+            <div class="flip-card-back">
+              <p><a href="examples.html">Web Design Principles</a></p>
+              <p>Various examples of web design tricks.</p>
+              <p>All work done as part of University of Florida course MMC 5277</p>
+            </div>
+          </div>
+        </div>
 
-      <img src="images/safetycompass.png" alt="Safety Compass Newsletter header" />
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/vts.png" alt="FHWA Virtual Trade Show Booth Website" title="FHWA Virtual Trade Show Booth Website" />
+            </div>
+
+            <div class="flip-card-back">
+              <p><a href="https://safety.fhwa.dot.gov/pedestrian_safety_virtual_booth/" target="_blank">Virtual Trade Show Booth</a></p>
+              <p>FHWA Office of Safety Virtual Trade Show Booth</p>
+              <p>Body HTML coding for Section 508 conformance completed as a contractor.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/safetycompass.png" alt="FHWA Safety Compass Newsletter logo" title="FHWA Safety Compass Newsletter" />
+            </div>
+
+            <div class="flip-card-back">
+              <p><a href="https://safety.fhwa.dot.gov/newsletter/safetycompass/2021/winter/" target="_blank">Safety Compass Newsletter</a></p>
+              <p>FHWA Office of Safety &ndash; Safety Compass Newsletter</p>
+              <p>Body HTML coding for Section 508 conformance completed as a contractor.</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Graphic Design -->
-      <h2>design</h2>
+      <section class="cards">
+        <h2>design</h2>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/portiko.png" alt="University of Florida Design Project Portiko logo" title="Portiko Technologies" />
+            </div>
 
-      <img src="images/portiko.png" alt="Portiko logo" />
+            <div class="flip-card-back">
+              <p><a href="pdfs/portiko.pdf" target="_blank">Portiko Technologies</a></p>
+              <p>Portiko Technologies Brand Identity Guide</p>
+              <p>Project for University of Florida Course VIC 5315, Corporate and Brand Identity</p>
+            </div>
+          </div>
+        </div>
 
-      <img src="images/gedc.png" alt="Gainesville Economic Development Corporation logo">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/gedc.png" alt="University of Florida Design Project Gainesville Economic Development Corporation logo" title="Gainesville Economic Development Corporation" />
+            </div>
 
-      <img src="images/30days.jpg" alt="30 Days of Blacksburg poster">
+            <div class="flip-card-back">
+              <p><a href="pdfs/gedc.pdf" target="_blank">Gainesville Economic Development Corporation</a></p>
+              <p>Gainesville Economic Development Corporation Logo Proposal</p>
+              <p>Project for University of Florida Course VIC 5315, Corporate and Brand Identity</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/30days.jpg" alt="Virginia Tech SGA 30 Days of Blacksburg design" title="30 Days of Blacksburg" />
+            </div>
+
+            <div class="flip-card-back">
+              <p><a href="pdfs/30days.pdf" target="_blank">30 Days of Blacksburg</a></p>
+              <p>30 Days of Blacksburg Poster</p>
+              <p>Poster developed for Virginia Tech SGA to promote event throughout campus and community</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Writing / Editing -->
-      <h2>writing</h2>
+      <section class="cards">
+        <h2>writing</h2>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/incentives.png" alt="FHWA Office of Operations report cover" title="Expanding Traveler Choices through the Use of Incentives: A Compendium of Examples" />
+            </div>
 
-      <img src="images/incentives.png" alt="FHWA Office of Operations report cover">
+            <div class="flip-card-back">
+              <p><a href="https://ops.fhwa.dot.gov/publications/fhwahop18071/index.htm#toc" target="_blank">FHWA Office of Operations Report</a></p>
+              <p>Expanding Traveler Choices through the Use of Incentives: A Compendium of Examples</p>
+              <p>Contributing writer under FHWA contract</p>
+            </div>
+          </div>
+        </div>
 
-      <img src="images/sc.png" alt="FHWA Office of Safety Safety Compass Newsletter Article screenshot">
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/sc.png" alt="FHWA Office of Safety Safety Compass Newsletter Article screenshot" title="Safety Compass Newsletter Article" />
+            </div>
 
-      <img src="images/spring.png" alt="SPRING Project Success Story">
+            <div class="flip-card-back">
+              <p><a href="https://safety.fhwa.dot.gov/newsletter/safetycompass/2017/spring/#s1" target="_blank">Safety Compass Newsletter Article</a></p>
+              <p>Safety Compass Subscriber Survey: The Results Are In!</p>
+              <p>Contributing writer under FHWA contract</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/spring.png" alt="SPRING Project Success Story" title="SPRING Project Success Story" />
+            </div>
+
+            <div class="flip-card-back">
+              <p><a href="https://www.spring-nutrition.org/publications/success-stories/using-ojt-better-nutrition-haiti" target="_blank">SPRING Project Success Story</a></p>
+              <p>Using OJT for Better Nutrition in Haiti</p>
+              <p>Written under USAID/SPRING Project.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
 
