set up css animation

--- a/resume.html
+++ b/resume.html
@@ -63,19 +63,19 @@
         <p>HTML</p>
 
         <div class="progress">
-          <div class="intermediate"></div>
+          <div class="intermediate-1"></div>
         </div>
 
         <p>Adobe Creative Suite</p>
 
         <div class="progress">
-          <div class="intermediate"></div>
+          <div class="intermediate-2"></div>
         </div>
 
         <p>Technical Editing</p>
 
         <div class="progress">
-          <div class="intermediate"></div>
+          <div class="intermediate-3"></div>
         </div>
 
         <p>CSS</p>
