--- a/contact.html
+++ b/contact.html
@@ -44,46 +44,46 @@
 
     <!-- Main Body -->
     <main>
-      <section class="contact-page">
         <h1>let's chat</h1>
 
-        <aside class="football">
-          <img src="images/contact.jpg" alt="Virginia Tech Football Game" width="400">
+        <aside class="left">
+          <img src="images/contact.jpg" alt="Virginia Tech Football Game" width="100%">
         </aside>
 
-        <div class="written">
-          <p class="email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
-          <p class="phone"><a href="tel:+12405294709">(240) 529-4709</a></p>
-          <p>Washington, D.C.</p>
-          <a href="https://www.linkedin.com/in/kayce-georgi-1591572b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        </div>
-
-        <!-- Form -->
-        <form id="test_form" class="contactform" name="test_form" method="post" action="form.php" onsubmit="return validateForm(this)">
-          <div class="nameform classifier">
-            <label for="nameinput" class="label_input_wrap">Name</label>
-            <input type="text" name="nameinput" id="nameinput" />
+        <section class="right">
+          <div class="written">
+            <p class="email"><a href="mailto:georgi.kayce@ufl.edu">georgi.kayce@ufl.edu</a></p>
+            <p class="phone"><a href="tel:+12405294709">(240) 529-4709</a></p>
+            <p>Washington, D.C.</p>
+            <a href="https://www.linkedin.com/in/kayce-georgi-1591572b/" target="_blank"><i class="fab fa-linkedin"></i></a>
           </div>
 
-          <div class="emailform classifier">
-            <label for="emailinput" class="label_input_wrap">Email</label>
-            <input type="email" name="emailinput" id="emailinput" />
-          </div>
+          <!-- Form -->
+          <form id="test_form" class="contactform" name="test_form" method="post" action="form.php" onsubmit="return validateForm(this)">
+            <div class="nameform classifier">
+              <label for="nameinput" class="label_input_wrap">Name</label>
+              <input type="text" name="nameinput" id="nameinput" />
+            </div>
 
-          <div class="comment classifier">
-            <label for="comments" class="label_input_wrap">Message</label>
-            <textarea name="comments" id="comments" cols="60" rows="6"></textarea>
-          </div>
+            <div class="emailform classifier">
+              <label for="emailinput" class="label_input_wrap">Email</label>
+              <input type="email" name="emailinput" id="emailinput" />
+            </div>
 
-          <div class="reset button">
-            <input type="reset" value="Refresh">
-          </div>
+            <div class="comment classifier">
+              <label for="comments" class="label_input_wrap">Message</label>
+              <textarea name="comments" id="comments" cols="60" rows="6"></textarea>
+            </div>
 
-          <div class="submit button">
-            <input type="submit" value="Send">
-          </div>
-        </form>
-      </section>
+            <div class="reset button">
+              <input type="reset" value="Refresh">
+            </div>
+
+            <div class="submit button">
+              <input type="submit" value="Send">
+            </div>
+          </form>
+        </section>
     </main>
 
     <footer>
