css updates; added form scripts

--- a/resume.html
+++ b/resume.html
@@ -86,10 +86,10 @@
       </aside>
 
       <!-- Main Body -->
-      <section class="resumetext">
-        <h2 class="resumehead">work experience</h2>
+      <section class="resume">
+        <h2>work experience</h2>
 
-        <div class="leidos">
+        <div class="employment">
           <p class="bold">Marketing and Communications Specialist, Leidos</p>
           <p>November 2016 &ndash; present</p>
           <p class="italic">Reston, VA</p>
@@ -104,7 +104,7 @@
           </ul>
         </div>
 
-        <div class="jsi">
+        <div class="employment">
           <p class="bold">Communications and Production Coordinator, John Snow, Inc.</p>
           <p>June 2014 &ndash; November 2016</p>
           <p class="italic">Arlington, VA</p>
@@ -120,16 +120,16 @@
           </ul>
         </div>
 
-        <h2 class="resumehead">education</h2>
+        <h2>education</h2>
 
-        <div class="florida">
+        <div class="education">
           <p class="bold">Masters of Art, Mass Communication</p>
           <p class="bold italic">Web Design</p>
           <p>University of Florida</p>
           <p>January 2021 &ndash; present</p>
         </div>
 
-        <div class="vt">
+        <div class="education">
           <p class="bold">Bachelors of Art, Communication</p>
           <p class="bold italic">Electronic and Print Journalism, minors in Professional Writing, Marketing Communications, and Popular Culture</p>
           <p>Virginia Tech</p>
