updated images, file links, and added favicon

--- a/examples.html
+++ b/examples.html
@@ -34,6 +34,9 @@
     <!--Font Awesome -->
     <script src="https://kit.fontawesome.com/7c9dc3d97e.js" crossorigin="anonymous"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
   </head>
   <body>
     <header>
