--- a/work.html
+++ b/work.html
@@ -27,6 +27,9 @@
     <!--Font Awesome -->
     <script src="https://kit.fontawesome.com/7c9dc3d97e.js" crossorigin="anonymous"></script>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
   </head>
   <body>
     <header>
@@ -129,7 +132,7 @@
             </div>
 
             <div class="flip-card-back">
-              <p><a href="pdfs/30days.pdf" target="_blank">30 Days of Blacksburg</a></p>
+              <p><a href="images/30days2010.jpg" target="_blank">30 Days of Blacksburg</a></p>
               <p>30 Days of Blacksburg Poster</p>
               <p>Poster developed for Virginia Tech SGA to promote event throughout campus and community</p>
             </div>
@@ -147,7 +150,7 @@
             </div>
 
             <div class="flip-card-back">
-              <p><a href="https://ops.fhwa.dot.gov/publications/fhwahop18071/index.htm#toc" target="_blank">FHWA Office of Operations Report</a></p>
+              <p><a href="https://ops.fhwa.dot.gov/publications/fhwahop18071/index.htm" target="_blank">FHWA Office of Operations Report</a></p>
               <p>Expanding Traveler Choices through the Use of Incentives: A Compendium of Examples</p>
               <p>Contributing writer under FHWA contract</p>
             </div>
