swapped out cjc for wdw image

--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="images/wdw.png" alt="University of Florida Assignment 4 CSS Animation Website" title="CSS Animation Website" />
+              <img src="images/cjc.png" alt="University of Florida College of Journalism and Communications Online logo" title="Web Design Principles Website" />
             </div>
 
             <div class="flip-card-back">
