--- a/examples.html
+++ b/examples.html
@@ -57,12 +57,16 @@
 
       <h2>lightbox</h2>
 
+      <h3>Walt Disney World Park Maps</h3>
+
       <section class="lightbox-example">
-        <a href="images/wdw.png" data-lightbox="image-1" data-title="CSS Animation Assignment"><img src="images/wdw.png" alt="Assignment 4 Website screenshot" /></a>
+        <a href="images/mk.jpg" data-lightbox="image-1" data-title="Magic Kingdom Map"><img src="images/mk.jpg" alt="Magic Kingdom Map" /></a>
 
-        <a href="images/vts.png" data-lightbox="image-1" data-title="FHWA Office of Safety Virtual Trade Show Booth"><img src="images/vts.png" alt="Virtual Trade Show Booth Screenshot" /></a>
+        <a href="images/epcot.jpg" data-lightbox="image-1" data-title="Epcot Map"><img src="images/epcot.jpg" alt="Epcot Map" /></a>
 
-        <a href="images/safetycompass.png" data-lightbox="image-1" data-title="FHWA Office of Safety Safety Compass Newsletter"><img src="images/safetycompass.png" alt="Safety Compass Newsletter header" /></a>
+        <a href="images/hollywood.jpg" data-lightbox="image-1" data-title="Hollywood Studios Map"><img src="images/hollywood.jpg" alt="Hollywood Studios Map" /></a>
+
+        <a href="images/ak.jpg" data-lightbox="image-1" data-title="Animal Kingdom Map"><img src="images/ak.jpg" alt="Animal Kingdom Map" /></a>
       </section>
 
 
