added style/details section

--- a/examples.html
+++ b/examples.html
@@ -57,7 +57,7 @@
 
       <h2>lightbox</h2>
 
-      <h3>Walt Disney World Park Maps</h3>
+      <h3>walt disney world park maps</h3>
 
       <section class="lightbox-example">
         <a href="images/mk.jpg" data-lightbox="image-1" data-title="Magic Kingdom Map"><img src="images/mk.jpg" alt="Magic Kingdom Map" /></a>
@@ -67,6 +67,34 @@
         <a href="images/hollywood.jpg" data-lightbox="image-1" data-title="Hollywood Studios Map"><img src="images/hollywood.jpg" alt="Hollywood Studios Map" /></a>
 
         <a href="images/ak.jpg" data-lightbox="image-1" data-title="Animal Kingdom Map"><img src="images/ak.jpg" alt="Animal Kingdom Map" /></a>
+      </section>
+
+      <h2>summary / details</h2>
+
+      <h3>university of florida course schedule</h3>
+
+      <section class="courses">
+        <details>
+          <summary>Spring 2021</summary>
+          <ul>
+            <li>MMC 5277: Web Design Principles</li>
+            <li>VIC 5315: Corporate and Brand Identity on the Web</li>
+          </ul>
+        </details>
+        <details>
+          <summary>Summer 2021</summary>
+          <ul>
+            <li>COM 6338: Advanced Web Topics 1: Advanced Design</li>
+            <li>MMC 6936: Foundations of Visual Communications Design</li>
+          </ul>
+        </details>
+        <details>
+          <summary>Fall 2021 (Planned)</summary>
+          <ul>
+            <li>VIC 5325: Digital Imagery in Web Design</li>
+            <li>MMC 6400: Mass Communication Theory</li>
+          </ul>
+        </details>
       </section>
 
 
