fixed link hover underline, index copy, unified header size

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <p>I am also familiar with the Adobe Creative Suite and have been using Illustrator, InDesign, and Photoshop since I was introduced to CS3 in high school.</p>
 
-        <p>Outside of design and web langauges, my communications background has made me familiar with writing, editing, webinar facilitation, event planning, and accessibility, especially in regards to Section 508 and the Web Content Accessibility Guidelines (WCAG).</p>
+        <p>Outside of design and web langauges, I have worked in writing, editing, webinar facilitation, event planning, and accessibility, especially in regards to Section 508 and the Web Content Accessibility Guidelines (WCAG).</p>
 
         <p>I look forward to finding out how I fit into your team!</p>
       </section>
