--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         <h1>let's chat</h1>
 
         <aside class="left">
-          <img src="images/contact.jpg" alt="Virginia Tech Football Game" width="100%">
+          <img src="images/contact.jpg" alt="Virginia Tech Football Game" width="450">
         </aside>
 
         <section class="right">
