--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Main Body -->
     <main>
       <aside class="left">
-        <img src="images/photo.jpg" alt="Kayce Georgi Photo" title="Kayce Georgi" width="100%"/>
+        <img src="images/photo.jpg" alt="Kayce Georgi Photo" title="Kayce Georgi" width="450"/>
       </aside>
 
       <section class="right">
