--- a/work.html
+++ b/work.html
@@ -106,7 +106,7 @@
             <div class="flip-card-back">
               <p><a href="pdfs/portiko.pdf" target="_blank">Portiko Technologies</a></p>
               <p>Portiko Technologies Brand Identity Guide</p>
-              <p>Project for University of Florida Course VIC 5315, Corporate and Brand Identity</p>
+              <p>Project for Corporate and Brand Identity</p>
             </div>
           </div>
         </div>
@@ -119,8 +119,8 @@
 
             <div class="flip-card-back">
               <p><a href="pdfs/gedc.pdf" target="_blank">Gainesville Economic Development Corporation</a></p>
-              <p>Gainesville Economic Development Corporation Logo Proposal</p>
-              <p>Project for University of Florida Course VIC 5315, Corporate and Brand Identity</p>
+              <p>Logo Proposal</p>
+              <p>Project for Corporate and Brand Identity</p>
             </div>
           </div>
         </div>
